# vimfiles

./: .gitignore  .luarc.json  Makefile  README  README.md  example.vim  install-nvim.ps1  install-nvim.sh  install.bat  install.sh  plug_update.sh  usepwsh.vim
vim/: .vimrc  (+28 more)
vim/mysnippets/: CMakeLists.txt  Makefile1  Makefile2  conanfile.txt  init-template  snippet_helpers.py
vim/mysnippets/cmake/: conan.txt  find_program.txt  vs_unicode_utf8.txt
vim/mysnippets/codesnippets/: fancyhdr01.md  vagrant-ubuntu20
vim/mysnippets/codesnippets/cmake/: CMakeLists-2.txt  CMakeLists.txt  PatchFile.cmake  add_catch2.txt  c_visibility.txt  check_multi_generator.txt  cmake-fetchcontent.txt  cmake_example.txt  compile_commands.txt  conan_cmake.txt  copy-dlls.txt  copy-ffmpeg-dlls.txt  copy-runtime-dlls.txt  cpp14.txt  dump_variables.txt  fetch_content.txt  fetch_json.txt  fetch_lua.txt  fetcher.cmake
vim/mysnippets/codesnippets/cpp/: finally.cc  simple-finally.cpp
vim/mysnippets/codesnippets/dosini/: mypy-simple.ini  pytest.ini
vim/mysnippets/codesnippets/go/: actor.go  aes_cfb.go  cmd_wait.go  config.go  copy_file2.go  copy_file_sync.go  flag_subcommand.go  func_call.go  imp_spew.go  json-partial.go  middleware_methodoverride.go  redigo-pool.go  use_gin.go  utf16.go  util_quote.go  uuid.go
vim/mysnippets/codesnippets/http/: basic.http  variable.http
vim/mysnippets/codesnippets/init/: app.js  docker-compose-dev.yaml  editorconfig  pyproject.toml  pytest.ini  supervisor.conf
vim/mysnippets/codesnippets/javascript/: Gulpfile.js  dev-server.js  err_custom.js  express-server.js  filemd5.js  hereby-example.mjs  jquery-plugin-1.js  jquery-plugin-option.js  proxy.js  static-proxy.js  webpack-dynamic-require.js
vim/mysnippets/codesnippets/json/: da-lldb-cpp.json  da-python.json  da-rust.json  pyrightconfig.json  tsconfig.json  vscode-node-debug-launch.json
vim/mysnippets/codesnippets/lua/: bufmap.lua  cmd-with-fargs.lua  dap-python-projectconfig.lua  dap_cpp_configuration.lua  dap_go_custom_configruation.lua  dap_python_local.lua  define_command.lua  get_visual_text.lua  hydra1.lua  lazy_event.lua  lsp-attach-event.lua  lsp-pyright.lua  lsp-python-full.lua  null-ls-disable.lua  oop.lua  patch_pylint.lua  script_name.lua
vim/mysnippets/codesnippets/make/: cmake-makefile.make  go-make  root_dir.make
vim/mysnippets/codesnippets/ps1/: deploy-local.ps1  download.ps1  get-randomstring.ps1  param-simple.ps1  publish-hkeaa.ps1  publish.ps1  sort_by_write)time.ps1
vim/mysnippets/codesnippets/python/: arg_no_flag.py  copy-dir.py  dbg.py  dir_mk_rm.py  django-custom-command.py  download_file.py  download_progress.py  find_execuable.py  go_deploy.py  hexstr.py  locust-taskset.py  logging-setup.py  md5file.py  parse-boolean-action.py  parse_args.py  parse_sub_args.py  parse_sub_command.py  parse_sub_command_typing.py  ycm_objc.py  ycm_python.py  zipunzip.py
vim/mysnippets/codesnippets/sh/: arg-parse.sh  entrypoint_alpine.sh  fun-args.sh  getopts  notifier  readenv.sh  tmux-2x2.sh  utils.sh
vim/mysnippets/codesnippets/text/: ccls-node.txt  ccls.txt  clangd_compile_flags.txt  clangd_node_addon.txt  conan-node-gyp.txt  conanfile.txt
vim/mysnippets/codesnippets/toml/: isort.toml  pyproject-basedpyright.toml  pyroject-sample.toml
vim/mysnippets/codesnippets/typescript/: execAsync.ts  ip_outbound.ts  jest-simple.ts  md5-file.ts
vim/mysnippets/codesnippets/vim/: get_visual_selection.vim
vim/mysnippets/dockerfile/: alpine-dockerfile  node-build.  node-release
vim/mysnippets/gn/: gn_sample.gn
vim/mysnippets/go/: args_subcommand.go  assert.go  auth_basic.go  buf_pool.go  call_func_simple.go  copy_file.go  exec_cmd.go  file_copy_exits.go  http_do.go  http_download.go  http_error.go  http_server.go  ip2int.go  ip_outbound.go  ip_real.go  prometheus_counter.go  struct_copy.go  upload.go  ver_compare.go
vim/mysnippets/javascript.jsx/: appdmg.js  webpack-ts.js
vim/mysnippets/json/: da-bash.json
vim/mysnippets/lua/: read_var.lua  spawn.lua
vim/mysnippets/luasnippets/: all.lua  boilerplate.lua  c.lua
vim/mysnippets/python/: fabric2-header.py  fabric2_default_hosts.py  getcert.py  inv-remote.py  logging_rotating.py  md5.py  p2or3.py  py3.py  py3_header.py  setup_logging.py  temp_dir_contextmanager.py  ycm_common.py  ycm_node.py  ycm_objc.py
vim/mysnippets/rust/: custom_err.rs  download_command.rs
vim/mysnippets/snippets/: all.snippets  ansible.snippets  cpp.snippets  css.snippets  go.snippets  http.snippets  javascript.snippets  lua.snippets  make.snippets  ps1.snippets  python.snippets  rust.snippets  sh.snippets  toml.snippets  txt.snippets  typescript.snippets  vue.snippets  yaml.snippets
vim/mysnippets/typescript/: ack.ts  getarg.ts  lazyinit.ts  mocah.ts
vim/mysnippets/ultisnips/: all.snippets  cmake.snippets  cpp.snippets  dot.snippets  go.snippets  html-ng2.snippets  html.snippets  javascript.snippets  json.snippets  jsp.snippets  markdown.snippets  mysql.snippets  python.snippets  sh.snippets  sql.snippets  typescript.snippets  yaml.snippets
vim/mysnippets/vim/: py_var.vim
vim/mysnippets/yaml/: api-model.yaml  api_info.yaml
(+237 files in other folders)
